fix: align dashicons icon vertically in edit API token button

--- a/src/styles/flareload-main.scss
+++ b/src/styles/flareload-main.scss
@@ -86,6 +86,10 @@ body.media-new-php {
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
+
+  .dashicons {
+    line-height: 1;
+  }
 }
 
 .flareload-switcher-for-block-placeholder {
